Bug 119611 - Chart shown as blank in edit mode
Summary: Chart shown as blank in edit mode
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
6.2.0.0.alpha0+
Hardware: All Linux (All)
: high major
Assignee: Regina Henschel
URL:
Whiteboard: target:6.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2018-08-30 17:38 UTC by Buovjaga
Modified: 2018-09-06 13:56 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Buovjaga 2018-08-30 17:38:48 UTC
1. Create a chart in Writer or Calc

Observe the mind-numbing blankness.
Regression appeared in 6.2.

Win build from 21st Aug does not show the problem yet. There are no newer Win TB builds, unfortunately.

Arch Linux 64-bit
Version: 6.2.0.0.alpha0+
Build ID: b0e74b65a86eb965c3e93da2fb77972cc5445f3c
CPU threads: 8; OS: Linux 4.18; UI render: default; VCL: gtk3_kde5; 
Locale: fi-FI (fi_FI.UTF-8); Calc: threaded
Built on August 29th 2018
Comment 1 Xisco Faulí 2018-08-30 22:49:33 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=9826a4e4a6aa9953d3f354fe645a23f9dae59d77

author	Regina Henschel <rb.henschel@t-online.de>	2018-08-17 19:02:55 +0200
committer	Tomaž Vajngerl <quikee@gmail.com>	2018-08-27 16:27:17 +0200
commit 9826a4e4a6aa9953d3f354fe645a23f9dae59d77 (patch)
tree 25a38cbe766a092b8df736ab5c75581d77944895
parent 3ed1bd19eb7fb7898bcca8e046e058799f836063 (diff)
tdf#101242 Support draw:display and draw:protect attributes of ODF

Bisected with: bibisect-linux64-6.2

Adding Cc: to Regina Henschel
Comment 2 Regina Henschel 2018-08-31 11:20:13 UTC
@Armin: Do you have a guess about the reason?
Comment 3 Regina Henschel 2018-09-01 11:17:52 UTC
Proposed patch is in https://gerrit.libreoffice.org/#/c/59895/
Comment 4 Buovjaga 2018-09-01 13:00:12 UTC
(In reply to Regina Henschel from comment #3)
> Proposed patch is in https://gerrit.libreoffice.org/#/c/59895/

Patch fixes it for me

Arch Linux 64-bit
Version: 6.2.0.0.alpha0+
Build ID: 1c59d021b3dd27c8c0255312bd0d53ad25965bab
CPU threads: 8; OS: Linux 4.18; UI render: default; VCL: gtk3_kde5; 
Locale: fi-FI (fi_FI.UTF-8); Calc: threaded
Built on September 1st 2018
Comment 5 Commit Notification 2018-09-01 20:39:10 UTC
Regina Henschel committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d59acca8d1e33585d6f29cd85e8cb0d598067f9b

tdf#119611 Use generic SetAll() in SdrPageView ctor.

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Xisco Faulí 2018-09-03 18:00:08 UTC
Verified in

Version: 6.2.0.0.alpha0+
Build ID: 4b5fcd417587cfb9e6d8b61ecb037ab165eeb5b9
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: threaded

@Regina Henschel, Thanks for fixing this!!