tdf#119611 Use generic SetAll() in SdrPageView ctor.

The LayerAdmin has invalid values in case of charts. In
consequence a bitfield with only zeros was generated,
meaning all is invisible and not printable.

Change-Id: I59d341ac8742f81b5f9afb28dc9add459a01525f